client/StichHub/src/index.css
@tailwind base;

::-webkit-scrollbar {
  width: 7px;
  height: 5px;
  display: block;

}



::-webkit-scrollbar-track {
  border-radius: 0px;
}

.configurator::-webkit-scrollbar-track {
  background: #fff;
  border-radius: 0px;
}

::-webkit-scrollbar-thumb {
  background-color: rgb(0, 3, 130);
  border-radius: 20px;
  border: 3px solid rgb(0, 3, 130);;
}

.configurator::-webkit-scrollbar-thumb {
  background-color: rgb(165 180 252);
  border-radius: 20px;
  border: 3px solid rgb(165 180 252);
}

.filter::-webkit-scrollbar-track {
  background: transparent;
  border-radius: 0px;
}

.filter::-webkit-scrollbar-thumb {
  background-color: aquamarine;
  border-radius: 20px;
  border: 3px solid aquamarine;
}

@tailwind components;
@tailwind utilities;

.modelGradient {
  background: linear-gradient(
    180deg,
    rgba(188, 165, 255, 0.4) 0%,
    #214d76 100%
  );
  border: 1px solid #000000;
  filter: blur(61.5px);
}

.circleGradient-peach {
  background: radial-gradient(
    50% 50% at 50% 50%,
    rgba(183, 136, 136, 0.35) 0%,
    rgba(217, 217, 217, 0) 100%
  );
}

.circleGradient-blue {
  background: radial-gradient(
    50% 50% at 50% 50%,
    rgba(0, 194, 255, 0.6) 0%,
    rgba(217, 217, 217, 0) 100%
  );
}

.circleGradient-white {
  background: #ffffff;
  filter: blur(225px);
  transform: rotate(32.28deg);
}

.cardGradient {
  background: linear-gradient(
    144.39deg,
    #ffffff -278.56%,
    #6d6d6d -78.47%,
    #11101d 91.61%,
    #11101d 100.61%
  );
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  backdrop-filter: blur(2px);
}

